# sciAgent

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_SUMMARY.md  MIGRATIONS.md  PLAN.md  README.md  TODO.md  alembic.ini  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yml  pytest.ini
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.ci  Dockerfile.dev  main.py  pyproject.toml  requirements.txt  start.dev.sh  start.sh  test_data_scientist.py
backend/api/: __init__.py
backend/api/routes/: __init__.py  auth.py  data_sources.py  files.py  sessions.py
backend/core/: config.py
backend/db/: __init__.py  database.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 001_initial.py  002_add_session_mode.py  003_add_message_stopped.py  004_add_session_title.py  005_update_session_mode.py  006_add_data_sources.py  006_add_session_is_public.py  007_add_session_events.py
backend/db/models/: __init__.py  data_source.py  file.py  message.py  session.py  session_event.py  user.py
backend/schemas/: __init__.py  auth.py  data_sources.py  files.py  sessions.py
backend/services/: auth.py  cleanup.py  data_source_tools.py  session_manager.py  task_queue.py  task_worker.py
backend/tests/: conftest.py
backend/tests/integration/: test_data_scientist_real.py
backend/tests/test_api/: test_auth.py  test_data_sources.py  test_files.py  test_public_sessions.py  test_sessions.py
backend/tests/test_db/: test_data_source_model.py  test_models.py  test_session_events.py
backend/tests/test_services/: test_auth.py  test_data_source_tools.py  test_session_manager.py
backend/workspaces/88888/17d28634-e361-44e6-a019-77135ffccab5/: README.md  pyproject.toml
backend/workspaces/99999/5b109d6b-fb70-4be5-8f34-04391e8f21a3/: README.md
docs/: DATASCIENTIST_INTEGRATION.md  DATASCIENTIST_OPTIMIZATION.md  LOGS_GUIDE.md
docs/plans/: 2026-03-06-chat-history-fix-design.md  (+1 more)
examples/: quickstart.py
frontend/: .env.example  Dockerfile  Dockerfile.ci  Dockerfile.dev  middleware.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/app/: layout.tsx  (+1 more)
(+197 files in other folders)
