[project]
name = "agentic-data-scientist-session"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Core scientific computing
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.0",
    
    # Data formats and utilities
    "pyyaml>=6.0.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    
    # Notebooks support
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    
    # Additional utilities
    "tqdm>=4.66.0",
    "plotly>=5.17.0",
    
    # Environment management
    "python-dotenv>=1.0.0",
]
